# avr-zapper

./: .clang-format  .clang-tidy  CMakeLists.txt  readme.md
cmake/: add_subdirs.cmake  avr-toolchain.cmake  build_version.cmake  count_flash.cmake  doxygen.cmake  versioning.cmake
source/: CMakeLists.txt
source/app/: CMakeLists.txt  callbacks.c  global_defines.h  main.c  system_settings.h
source/driver/: CMakeLists.txt  dcdc_driver.c  dcdc_driver.h  display_driver.c  display_driver.h  output_driver.c  output_driver.h  output_driver_table.h
source/hal/: CMakeLists.txt  adc.c  adc.h  gpio.c  gpio.h  pinConfig.h  timer_hal.c  timer_hal.h  uart_hal.c  uart_hal.h
source/utils/: CMakeLists.txt  logging.h  my_assert.h  uart_printf.c  uart_printf.h  version.h.in
tools/: increase_build_number.py  increase_flashing_number.py
